# demo-app

flask-vue-multiagent-demo/backend/: .gitignore  pyproject.toml  test.ipynb
flask-vue-multiagent-demo/backend/app/: __init__.py  azure_openai_handler.py  orchestrator.py  workflow_manager.py
flask-vue-multiagent-demo/backend/app/agents/: agent_a.py  base_agent.py
flask-vue-multiagent-demo/backend/app/config/: config.yaml
flask-vue-multiagent-demo/backend/app/entities/: config.py
flask-vue-multiagent-demo/backend/app/routes/: main.py
flask-vue-multiagent-demo/backend/app/template/: prompt.py
flask-vue-multiagent-demo/frontend/: index.html  package-lock.json  package.json  style.css  vite.config.js
flask-vue-multiagent-demo/frontend/public/: index.html
flask-vue-multiagent-demo/frontend/src/: App.vue  main.js
flask-vue-multiagent-demo/frontend/src/components/: ChartCard.vue  DailySalesChart.vue  Dashboard.vue  EmployeeTable.vue  Sidebar.vue  StatCard.vue  StatsCard.vue  TaskList.vue  Topbar.vue
flask-vue-multiagent-demo/frontend/src/router/: index.js
flask-vue-multiagent-demo/frontend/src/views/: Dashboard.vue
src/: App.vue  router.ts
src/components/: ChartCard.vue  EmployeeTable.vue  Navbar.vue  Sidebar.vue  StatCard.vue  TaskList.vue
src/plugins/: vuetify.ts
src/views/: DashboardView.vue
