[tool.poetry]
name = "flask-vue-multiagent-demo"
version = "0.1.0"
description = "Multi-agent chat demo using Flask and Vue"
authors = ["Your Name <you@example.com>"]
# ここを追加 ↓
packages = [
  { include = "app" }
]


[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.0"
flask-cors = "^3.0.10"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"